metalpipe/modelling/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AN
    CSV
    DATA
    FILE
    JSON
    LOCAL
    SOURCE

Grammar

Rule 0     S' -> multi_statement
Rule 1     multi_statement -> statement SEMICOLON
Rule 2     multi_statement -> multi_statement statement SEMICOLON
Rule 3     statement -> condition
Rule 4     statement -> selection_list
Rule 5     statement -> traversal
Rule 6     statement -> select_clause
Rule 7     statement -> property_assertion
Rule 8     statement -> relationship_assertion
Rule 9     statement -> select_head
Rule 10    statement -> function_application
Rule 11    statement -> coreference_assertion
Rule 12    statement -> function_definition
Rule 13    statement -> query_definition
Rule 14    traversal -> START AT condition
Rule 15    traversal -> GO DOWN UNTIL condition
Rule 16    traversal -> GO UP UNTIL condition
Rule 17    traversal -> traversal AS LABEL
Rule 18    traversal_chain -> traversal
Rule 19    traversal_chain -> traversal_chain traversal
Rule 20    condition -> LPAREN condition AND condition RPAREN
Rule 21    condition -> LPAREN condition OR condition RPAREN
Rule 22    condition -> NOT condition
Rule 23    condition -> TOP
Rule 24    condition -> HAS KEY LABEL
Rule 25    keypath -> LABEL
Rule 26    keypath -> keypath DOT LABEL
Rule 27    select_head -> SELECT selection_list FROM LABEL
Rule 28    select_clause -> select_head traversal_chain
Rule 29    query_definition -> QUERY LABEL IS select_clause
Rule 30    query_reference -> IN QUERY LABEL
Rule 31    property_assertion -> query_reference LABEL IS A PROPERTY LABEL OF ENTITY LABEL NAMED BY LABEL
Rule 32    property_assertion -> query_reference LABEL IS A UNIQUE PROPERTY LABEL OF ENTITY LABEL
Rule 33    coreference_assertion -> query_reference LABEL AND LABEL COREFER
Rule 34    relationship_assertion -> query_reference LABEL NAMED BY LABEL IS RELATED TO LABEL NAMED BY LABEL AS LABEL
Rule 35    pathname -> LABEL
Rule 36    pathname -> pathname DOT LABEL
Rule 37    function_definition -> LABEL IS A PYTHON FUNCTION IMPORTED FROM pathname
Rule 38    function_arguments -> keypath
Rule 39    function_arguments -> function_application
Rule 40    function_arguments -> function_arguments COMMA function_arguments
Rule 41    function_application -> LABEL LPAREN function_arguments RPAREN
Rule 42    selection_list -> function_application AS LABEL
Rule 43    selection_list -> keypath AS LABEL
Rule 44    selection_list -> selection_list COMMA function_application AS LABEL
Rule 45    selection_list -> selection_list COMMA keypath AS LABEL

Terminals, with rules where they appear

A                    : 31 32 37
AN                   : 
AND                  : 20 33
AS                   : 17 34 42 43 44 45
AT                   : 14
BY                   : 31 34 34
COMMA                : 40 44 45
COREFER              : 33
CSV                  : 
DATA                 : 
DOT                  : 26 36
DOWN                 : 15
ENTITY               : 31 32
FILE                 : 
FROM                 : 27 37
FUNCTION             : 37
GO                   : 15 16
HAS                  : 24
IMPORTED             : 37
IN                   : 30
IS                   : 29 31 32 34 37
JSON                 : 
KEY                  : 24
LABEL                : 17 24 25 26 27 29 30 31 31 31 31 32 32 32 33 33 34 34 34 34 34 35 36 37 41 42 43 44 45
LOCAL                : 
LPAREN               : 20 21 41
NAMED                : 31 34 34
NOT                  : 22
OF                   : 31 32
OR                   : 21
PROPERTY             : 31 32
PYTHON               : 37
QUERY                : 29 30
RELATED              : 34
RPAREN               : 20 21 41
SELECT               : 27
SEMICOLON            : 1 2
SOURCE               : 
START                : 14
TO                   : 34
TOP                  : 23
UNIQUE               : 32
UNTIL                : 15 16
UP                   : 16
error                : 

Nonterminals, with rules where they appear

condition            : 3 14 15 16 20 20 21 21 22
coreference_assertion : 11
function_application : 10 39 42 44
function_arguments   : 40 40 41
function_definition  : 12
keypath              : 26 38 43 45
multi_statement      : 2 0
pathname             : 36 37
property_assertion   : 7
query_definition     : 13
query_reference      : 31 32 33 34
relationship_assertion : 8
select_clause        : 6 29
select_head          : 9 28
selection_list       : 4 27 44 45
statement            : 1 2
traversal            : 5 17 18 19
traversal_chain      : 19 28

Parsing method: LALR

state 0

    (0) S' -> . multi_statement
    (1) multi_statement -> . statement SEMICOLON
    (2) multi_statement -> . multi_statement statement SEMICOLON
    (3) statement -> . condition
    (4) statement -> . selection_list
    (5) statement -> . traversal
    (6) statement -> . select_clause
    (7) statement -> . property_assertion
    (8) statement -> . relationship_assertion
    (9) statement -> . select_head
    (10) statement -> . function_application
    (11) statement -> . coreference_assertion
    (12) statement -> . function_definition
    (13) statement -> . query_definition
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL
    (42) selection_list -> . function_application AS LABEL
    (43) selection_list -> . keypath AS LABEL
    (44) selection_list -> . selection_list COMMA function_application AS LABEL
    (45) selection_list -> . selection_list COMMA keypath AS LABEL
    (14) traversal -> . START AT condition
    (15) traversal -> . GO DOWN UNTIL condition
    (16) traversal -> . GO UP UNTIL condition
    (17) traversal -> . traversal AS LABEL
    (28) select_clause -> . select_head traversal_chain
    (31) property_assertion -> . query_reference LABEL IS A PROPERTY LABEL OF ENTITY LABEL NAMED BY LABEL
    (32) property_assertion -> . query_reference LABEL IS A UNIQUE PROPERTY LABEL OF ENTITY LABEL
    (34) relationship_assertion -> . query_reference LABEL NAMED BY LABEL IS RELATED TO LABEL NAMED BY LABEL AS LABEL
    (27) select_head -> . SELECT selection_list FROM LABEL
    (41) function_application -> . LABEL LPAREN function_arguments RPAREN
    (33) coreference_assertion -> . query_reference LABEL AND LABEL COREFER
    (37) function_definition -> . LABEL IS A PYTHON FUNCTION IMPORTED FROM pathname
    (29) query_definition -> . QUERY LABEL IS select_clause
    (25) keypath -> . LABEL
    (26) keypath -> . keypath DOT LABEL
    (30) query_reference -> . IN QUERY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17
    START           shift and go to state 20
    GO              shift and go to state 21
    SELECT          shift and go to state 23
    LABEL           shift and go to state 18
    QUERY           shift and go to state 24
    IN              shift and go to state 25

    multi_statement                shift and go to state 1
    statement                      shift and go to state 2
    condition                      shift and go to state 3
    selection_list                 shift and go to state 4
    traversal                      shift and go to state 5
    select_clause                  shift and go to state 6
    property_assertion             shift and go to state 7
    relationship_assertion         shift and go to state 8
    select_head                    shift and go to state 9
    function_application           shift and go to state 10
    coreference_assertion          shift and go to state 11
    function_definition            shift and go to state 12
    query_definition               shift and go to state 13
    keypath                        shift and go to state 19
    query_reference                shift and go to state 22

state 1

    (0) S' -> multi_statement .
    (2) multi_statement -> multi_statement . statement SEMICOLON
    (3) statement -> . condition
    (4) statement -> . selection_list
    (5) statement -> . traversal
    (6) statement -> . select_clause
    (7) statement -> . property_assertion
    (8) statement -> . relationship_assertion
    (9) statement -> . select_head
    (10) statement -> . function_application
    (11) statement -> . coreference_assertion
    (12) statement -> . function_definition
    (13) statement -> . query_definition
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL
    (42) selection_list -> . function_application AS LABEL
    (43) selection_list -> . keypath AS LABEL
    (44) selection_list -> . selection_list COMMA function_application AS LABEL
    (45) selection_list -> . selection_list COMMA keypath AS LABEL
    (14) traversal -> . START AT condition
    (15) traversal -> . GO DOWN UNTIL condition
    (16) traversal -> . GO UP UNTIL condition
    (17) traversal -> . traversal AS LABEL
    (28) select_clause -> . select_head traversal_chain
    (31) property_assertion -> . query_reference LABEL IS A PROPERTY LABEL OF ENTITY LABEL NAMED BY LABEL
    (32) property_assertion -> . query_reference LABEL IS A UNIQUE PROPERTY LABEL OF ENTITY LABEL
    (34) relationship_assertion -> . query_reference LABEL NAMED BY LABEL IS RELATED TO LABEL NAMED BY LABEL AS LABEL
    (27) select_head -> . SELECT selection_list FROM LABEL
    (41) function_application -> . LABEL LPAREN function_arguments RPAREN
    (33) coreference_assertion -> . query_reference LABEL AND LABEL COREFER
    (37) function_definition -> . LABEL IS A PYTHON FUNCTION IMPORTED FROM pathname
    (29) query_definition -> . QUERY LABEL IS select_clause
    (25) keypath -> . LABEL
    (26) keypath -> . keypath DOT LABEL
    (30) query_reference -> . IN QUERY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17
    START           shift and go to state 20
    GO              shift and go to state 21
    SELECT          shift and go to state 23
    LABEL           shift and go to state 18
    QUERY           shift and go to state 24
    IN              shift and go to state 25

    statement                      shift and go to state 26
    condition                      shift and go to state 3
    selection_list                 shift and go to state 4
    traversal                      shift and go to state 5
    select_clause                  shift and go to state 6
    property_assertion             shift and go to state 7
    relationship_assertion         shift and go to state 8
    select_head                    shift and go to state 9
    function_application           shift and go to state 10
    coreference_assertion          shift and go to state 11
    function_definition            shift and go to state 12
    query_definition               shift and go to state 13
    keypath                        shift and go to state 19
    query_reference                shift and go to state 22

state 2

    (1) multi_statement -> statement . SEMICOLON

    SEMICOLON       shift and go to state 27


state 3

    (3) statement -> condition .

    SEMICOLON       reduce using rule 3 (statement -> condition .)


state 4

    (4) statement -> selection_list .
    (44) selection_list -> selection_list . COMMA function_application AS LABEL
    (45) selection_list -> selection_list . COMMA keypath AS LABEL

    SEMICOLON       reduce using rule 4 (statement -> selection_list .)
    COMMA           shift and go to state 28


state 5

    (5) statement -> traversal .
    (17) traversal -> traversal . AS LABEL

    SEMICOLON       reduce using rule 5 (statement -> traversal .)
    AS              shift and go to state 29


state 6

    (6) statement -> select_clause .

    SEMICOLON       reduce using rule 6 (statement -> select_clause .)


state 7

    (7) statement -> property_assertion .

    SEMICOLON       reduce using rule 7 (statement -> property_assertion .)


state 8

    (8) statement -> relationship_assertion .

    SEMICOLON       reduce using rule 8 (statement -> relationship_assertion .)


state 9

    (9) statement -> select_head .
    (28) select_clause -> select_head . traversal_chain
    (18) traversal_chain -> . traversal
    (19) traversal_chain -> . traversal_chain traversal
    (14) traversal -> . START AT condition
    (15) traversal -> . GO DOWN UNTIL condition
    (16) traversal -> . GO UP UNTIL condition
    (17) traversal -> . traversal AS LABEL

    SEMICOLON       reduce using rule 9 (statement -> select_head .)
    START           shift and go to state 20
    GO              shift and go to state 21

    traversal_chain                shift and go to state 30
    traversal                      shift and go to state 31

state 10

    (10) statement -> function_application .
    (42) selection_list -> function_application . AS LABEL

    SEMICOLON       reduce using rule 10 (statement -> function_application .)
    AS              shift and go to state 32


state 11

    (11) statement -> coreference_assertion .

    SEMICOLON       reduce using rule 11 (statement -> coreference_assertion .)


state 12

    (12) statement -> function_definition .

    SEMICOLON       reduce using rule 12 (statement -> function_definition .)


state 13

    (13) statement -> query_definition .

    SEMICOLON       reduce using rule 13 (statement -> query_definition .)


state 14

    (20) condition -> LPAREN . condition AND condition RPAREN
    (21) condition -> LPAREN . condition OR condition RPAREN
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17

    condition                      shift and go to state 33

state 15

    (22) condition -> NOT . condition
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17

    condition                      shift and go to state 34

state 16

    (23) condition -> TOP .

    SEMICOLON       reduce using rule 23 (condition -> TOP .)
    AND             reduce using rule 23 (condition -> TOP .)
    OR              reduce using rule 23 (condition -> TOP .)
    AS              reduce using rule 23 (condition -> TOP .)
    START           reduce using rule 23 (condition -> TOP .)
    GO              reduce using rule 23 (condition -> TOP .)
    RPAREN          reduce using rule 23 (condition -> TOP .)


state 17

    (24) condition -> HAS . KEY LABEL

    KEY             shift and go to state 35


state 18

    (41) function_application -> LABEL . LPAREN function_arguments RPAREN
    (37) function_definition -> LABEL . IS A PYTHON FUNCTION IMPORTED FROM pathname
    (25) keypath -> LABEL .

    LPAREN          shift and go to state 36
    IS              shift and go to state 37
    AS              reduce using rule 25 (keypath -> LABEL .)
    DOT             reduce using rule 25 (keypath -> LABEL .)


state 19

    (43) selection_list -> keypath . AS LABEL
    (26) keypath -> keypath . DOT LABEL

    AS              shift and go to state 38
    DOT             shift and go to state 39


state 20

    (14) traversal -> START . AT condition

    AT              shift and go to state 40


state 21

    (15) traversal -> GO . DOWN UNTIL condition
    (16) traversal -> GO . UP UNTIL condition

    DOWN            shift and go to state 41
    UP              shift and go to state 42


state 22

    (31) property_assertion -> query_reference . LABEL IS A PROPERTY LABEL OF ENTITY LABEL NAMED BY LABEL
    (32) property_assertion -> query_reference . LABEL IS A UNIQUE PROPERTY LABEL OF ENTITY LABEL
    (34) relationship_assertion -> query_reference . LABEL NAMED BY LABEL IS RELATED TO LABEL NAMED BY LABEL AS LABEL
    (33) coreference_assertion -> query_reference . LABEL AND LABEL COREFER

    LABEL           shift and go to state 43


state 23

    (27) select_head -> SELECT . selection_list FROM LABEL
    (42) selection_list -> . function_application AS LABEL
    (43) selection_list -> . keypath AS LABEL
    (44) selection_list -> . selection_list COMMA function_application AS LABEL
    (45) selection_list -> . selection_list COMMA keypath AS LABEL
    (41) function_application -> . LABEL LPAREN function_arguments RPAREN
    (25) keypath -> . LABEL
    (26) keypath -> . keypath DOT LABEL

    LABEL           shift and go to state 45

    selection_list                 shift and go to state 44
    function_application           shift and go to state 46
    keypath                        shift and go to state 19

state 24

    (29) query_definition -> QUERY . LABEL IS select_clause

    LABEL           shift and go to state 47


state 25

    (30) query_reference -> IN . QUERY LABEL

    QUERY           shift and go to state 48


state 26

    (2) multi_statement -> multi_statement statement . SEMICOLON

    SEMICOLON       shift and go to state 49


state 27

    (1) multi_statement -> statement SEMICOLON .

    LPAREN          reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    NOT             reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    TOP             reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    HAS             reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    START           reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    GO              reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    SELECT          reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    LABEL           reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    QUERY           reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    IN              reduce using rule 1 (multi_statement -> statement SEMICOLON .)
    $end            reduce using rule 1 (multi_statement -> statement SEMICOLON .)


state 28

    (44) selection_list -> selection_list COMMA . function_application AS LABEL
    (45) selection_list -> selection_list COMMA . keypath AS LABEL
    (41) function_application -> . LABEL LPAREN function_arguments RPAREN
    (25) keypath -> . LABEL
    (26) keypath -> . keypath DOT LABEL

    LABEL           shift and go to state 45

    function_application           shift and go to state 50
    keypath                        shift and go to state 51

state 29

    (17) traversal -> traversal AS . LABEL

    LABEL           shift and go to state 52


state 30

    (28) select_clause -> select_head traversal_chain .
    (19) traversal_chain -> traversal_chain . traversal
    (14) traversal -> . START AT condition
    (15) traversal -> . GO DOWN UNTIL condition
    (16) traversal -> . GO UP UNTIL condition
    (17) traversal -> . traversal AS LABEL

    SEMICOLON       reduce using rule 28 (select_clause -> select_head traversal_chain .)
    START           shift and go to state 20
    GO              shift and go to state 21

    traversal                      shift and go to state 53

state 31

    (18) traversal_chain -> traversal .
    (17) traversal -> traversal . AS LABEL

    START           reduce using rule 18 (traversal_chain -> traversal .)
    GO              reduce using rule 18 (traversal_chain -> traversal .)
    SEMICOLON       reduce using rule 18 (traversal_chain -> traversal .)
    AS              shift and go to state 29


state 32

    (42) selection_list -> function_application AS . LABEL

    LABEL           shift and go to state 54


state 33

    (20) condition -> LPAREN condition . AND condition RPAREN
    (21) condition -> LPAREN condition . OR condition RPAREN

    AND             shift and go to state 55
    OR              shift and go to state 56


state 34

    (22) condition -> NOT condition .

    SEMICOLON       reduce using rule 22 (condition -> NOT condition .)
    AND             reduce using rule 22 (condition -> NOT condition .)
    OR              reduce using rule 22 (condition -> NOT condition .)
    AS              reduce using rule 22 (condition -> NOT condition .)
    START           reduce using rule 22 (condition -> NOT condition .)
    GO              reduce using rule 22 (condition -> NOT condition .)
    RPAREN          reduce using rule 22 (condition -> NOT condition .)


state 35

    (24) condition -> HAS KEY . LABEL

    LABEL           shift and go to state 57


state 36

    (41) function_application -> LABEL LPAREN . function_arguments RPAREN
    (38) function_arguments -> . keypath
    (39) function_arguments -> . function_application
    (40) function_arguments -> . function_arguments COMMA function_arguments
    (25) keypath -> . LABEL
    (26) keypath -> . keypath DOT LABEL
    (41) function_application -> . LABEL LPAREN function_arguments RPAREN

    LABEL           shift and go to state 58

    function_arguments             shift and go to state 59
    keypath                        shift and go to state 60
    function_application           shift and go to state 61

state 37

    (37) function_definition -> LABEL IS . A PYTHON FUNCTION IMPORTED FROM pathname

    A               shift and go to state 62


state 38

    (43) selection_list -> keypath AS . LABEL

    LABEL           shift and go to state 63


state 39

    (26) keypath -> keypath DOT . LABEL

    LABEL           shift and go to state 64


state 40

    (14) traversal -> START AT . condition
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17

    condition                      shift and go to state 65

state 41

    (15) traversal -> GO DOWN . UNTIL condition

    UNTIL           shift and go to state 66


state 42

    (16) traversal -> GO UP . UNTIL condition

    UNTIL           shift and go to state 67


state 43

    (31) property_assertion -> query_reference LABEL . IS A PROPERTY LABEL OF ENTITY LABEL NAMED BY LABEL
    (32) property_assertion -> query_reference LABEL . IS A UNIQUE PROPERTY LABEL OF ENTITY LABEL
    (34) relationship_assertion -> query_reference LABEL . NAMED BY LABEL IS RELATED TO LABEL NAMED BY LABEL AS LABEL
    (33) coreference_assertion -> query_reference LABEL . AND LABEL COREFER

    IS              shift and go to state 68
    NAMED           shift and go to state 69
    AND             shift and go to state 70


state 44

    (27) select_head -> SELECT selection_list . FROM LABEL
    (44) selection_list -> selection_list . COMMA function_application AS LABEL
    (45) selection_list -> selection_list . COMMA keypath AS LABEL

    FROM            shift and go to state 71
    COMMA           shift and go to state 28


state 45

    (41) function_application -> LABEL . LPAREN function_arguments RPAREN
    (25) keypath -> LABEL .

    LPAREN          shift and go to state 36
    AS              reduce using rule 25 (keypath -> LABEL .)
    DOT             reduce using rule 25 (keypath -> LABEL .)


state 46

    (42) selection_list -> function_application . AS LABEL

    AS              shift and go to state 32


state 47

    (29) query_definition -> QUERY LABEL . IS select_clause

    IS              shift and go to state 72


state 48

    (30) query_reference -> IN QUERY . LABEL

    LABEL           shift and go to state 73


state 49

    (2) multi_statement -> multi_statement statement SEMICOLON .

    LPAREN          reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    NOT             reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    TOP             reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    HAS             reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    START           reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    GO              reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    SELECT          reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    LABEL           reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    QUERY           reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    IN              reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)
    $end            reduce using rule 2 (multi_statement -> multi_statement statement SEMICOLON .)


state 50

    (44) selection_list -> selection_list COMMA function_application . AS LABEL

    AS              shift and go to state 74


state 51

    (45) selection_list -> selection_list COMMA keypath . AS LABEL
    (26) keypath -> keypath . DOT LABEL

    AS              shift and go to state 75
    DOT             shift and go to state 39


state 52

    (17) traversal -> traversal AS LABEL .

    AS              reduce using rule 17 (traversal -> traversal AS LABEL .)
    SEMICOLON       reduce using rule 17 (traversal -> traversal AS LABEL .)
    START           reduce using rule 17 (traversal -> traversal AS LABEL .)
    GO              reduce using rule 17 (traversal -> traversal AS LABEL .)


state 53

    (19) traversal_chain -> traversal_chain traversal .
    (17) traversal -> traversal . AS LABEL

    START           reduce using rule 19 (traversal_chain -> traversal_chain traversal .)
    GO              reduce using rule 19 (traversal_chain -> traversal_chain traversal .)
    SEMICOLON       reduce using rule 19 (traversal_chain -> traversal_chain traversal .)
    AS              shift and go to state 29


state 54

    (42) selection_list -> function_application AS LABEL .

    COMMA           reduce using rule 42 (selection_list -> function_application AS LABEL .)
    SEMICOLON       reduce using rule 42 (selection_list -> function_application AS LABEL .)
    FROM            reduce using rule 42 (selection_list -> function_application AS LABEL .)


state 55

    (20) condition -> LPAREN condition AND . condition RPAREN
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17

    condition                      shift and go to state 76

state 56

    (21) condition -> LPAREN condition OR . condition RPAREN
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17

    condition                      shift and go to state 77

state 57

    (24) condition -> HAS KEY LABEL .

    SEMICOLON       reduce using rule 24 (condition -> HAS KEY LABEL .)
    AND             reduce using rule 24 (condition -> HAS KEY LABEL .)
    OR              reduce using rule 24 (condition -> HAS KEY LABEL .)
    AS              reduce using rule 24 (condition -> HAS KEY LABEL .)
    START           reduce using rule 24 (condition -> HAS KEY LABEL .)
    GO              reduce using rule 24 (condition -> HAS KEY LABEL .)
    RPAREN          reduce using rule 24 (condition -> HAS KEY LABEL .)


state 58

    (25) keypath -> LABEL .
    (41) function_application -> LABEL . LPAREN function_arguments RPAREN

    DOT             reduce using rule 25 (keypath -> LABEL .)
    RPAREN          reduce using rule 25 (keypath -> LABEL .)
    COMMA           reduce using rule 25 (keypath -> LABEL .)
    LPAREN          shift and go to state 36


state 59

    (41) function_application -> LABEL LPAREN function_arguments . RPAREN
    (40) function_arguments -> function_arguments . COMMA function_arguments

    RPAREN          shift and go to state 78
    COMMA           shift and go to state 79


state 60

    (38) function_arguments -> keypath .
    (26) keypath -> keypath . DOT LABEL

    RPAREN          reduce using rule 38 (function_arguments -> keypath .)
    COMMA           reduce using rule 38 (function_arguments -> keypath .)
    DOT             shift and go to state 39


state 61

    (39) function_arguments -> function_application .

    RPAREN          reduce using rule 39 (function_arguments -> function_application .)
    COMMA           reduce using rule 39 (function_arguments -> function_application .)


state 62

    (37) function_definition -> LABEL IS A . PYTHON FUNCTION IMPORTED FROM pathname

    PYTHON          shift and go to state 80


state 63

    (43) selection_list -> keypath AS LABEL .

    COMMA           reduce using rule 43 (selection_list -> keypath AS LABEL .)
    SEMICOLON       reduce using rule 43 (selection_list -> keypath AS LABEL .)
    FROM            reduce using rule 43 (selection_list -> keypath AS LABEL .)


state 64

    (26) keypath -> keypath DOT LABEL .

    AS              reduce using rule 26 (keypath -> keypath DOT LABEL .)
    DOT             reduce using rule 26 (keypath -> keypath DOT LABEL .)
    RPAREN          reduce using rule 26 (keypath -> keypath DOT LABEL .)
    COMMA           reduce using rule 26 (keypath -> keypath DOT LABEL .)


state 65

    (14) traversal -> START AT condition .

    AS              reduce using rule 14 (traversal -> START AT condition .)
    SEMICOLON       reduce using rule 14 (traversal -> START AT condition .)
    START           reduce using rule 14 (traversal -> START AT condition .)
    GO              reduce using rule 14 (traversal -> START AT condition .)


state 66

    (15) traversal -> GO DOWN UNTIL . condition
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17

    condition                      shift and go to state 81

state 67

    (16) traversal -> GO UP UNTIL . condition
    (20) condition -> . LPAREN condition AND condition RPAREN
    (21) condition -> . LPAREN condition OR condition RPAREN
    (22) condition -> . NOT condition
    (23) condition -> . TOP
    (24) condition -> . HAS KEY LABEL

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    TOP             shift and go to state 16
    HAS             shift and go to state 17

    condition                      shift and go to state 82

state 68

    (31) property_assertion -> query_reference LABEL IS . A PROPERTY LABEL OF ENTITY LABEL NAMED BY LABEL
    (32) property_assertion -> query_reference LABEL IS . A UNIQUE PROPERTY LABEL OF ENTITY LABEL

    A               shift and go to state 83


state 69

    (34) relationship_assertion -> query_reference LABEL NAMED . BY LABEL IS RELATED TO LABEL NAMED BY LABEL AS LABEL

    BY              shift and go to state 84


state 70

    (33) coreference_assertion -> query_reference LABEL AND . LABEL COREFER

    LABEL           shift and go to state 85


state 71

    (27) select_head -> SELECT selection_list FROM . LABEL

    LABEL           shift and go to state 86


state 72

    (29) query_definition -> QUERY LABEL IS . select_clause
    (28) select_clause -> . select_head traversal_chain
    (27) select_head -> . SELECT selection_list FROM LABEL

    SELECT          shift and go to state 23

    select_clause                  shift and go to state 87
    select_head                    shift and go to state 88

state 73

    (30) query_reference -> IN QUERY LABEL .

    LABEL           reduce using rule 30 (query_reference -> IN QUERY LABEL .)


state 74

    (44) selection_list -> selection_list COMMA function_application AS . LABEL

    LABEL           shift and go to state 89


state 75

    (45) selection_list -> selection_list COMMA keypath AS . LABEL

    LABEL           shift and go to state 90


state 76

    (20) condition -> LPAREN condition AND condition . RPAREN

    RPAREN          shift and go to state 91


state 77

    (21) condition -> LPAREN condition OR condition . RPAREN

    RPAREN          shift and go to state 92


state 78

    (41) function_application -> LABEL LPAREN function_arguments RPAREN .

    AS              reduce using rule 41 (function_application -> LABEL LPAREN function_arguments RPAREN .)
    SEMICOLON       reduce using rule 41 (function_application -> LABEL LPAREN function_arguments RPAREN .)
    RPAREN          reduce using rule 41 (function_application -> LABEL LPAREN function_arguments RPAREN .)
    COMMA           reduce using rule 41 (function_application -> LABEL LPAREN function_arguments RPAREN .)


state 79

    (40) function_arguments -> function_arguments COMMA . function_arguments
    (38) function_arguments -> . keypath
    (39) function_arguments -> . function_application
    (40) function_arguments -> . function_arguments COMMA function_arguments
    (25) keypath -> . LABEL
    (26) keypath -> . keypath DOT LABEL
    (41) function_application -> . LABEL LPAREN function_arguments RPAREN

    LABEL           shift and go to state 58

    function_arguments             shift and go to state 93
    keypath                        shift and go to state 60
    function_application           shift and go to state 61

state 80

    (37) function_definition -> LABEL IS A PYTHON . FUNCTION IMPORTED FROM pathname

    FUNCTION        shift and go to state 94


state 81

    (15) traversal -> GO DOWN UNTIL condition .

    AS              reduce using rule 15 (traversal -> GO DOWN UNTIL condition .)
    SEMICOLON       reduce using rule 15 (traversal -> GO DOWN UNTIL condition .)
    START           reduce using rule 15 (traversal -> GO DOWN UNTIL condition .)
    GO              reduce using rule 15 (traversal -> GO DOWN UNTIL condition .)


state 82

    (16) traversal -> GO UP UNTIL condition .

    AS              reduce using rule 16 (traversal -> GO UP UNTIL condition .)
    SEMICOLON       reduce using rule 16 (traversal -> GO UP UNTIL condition .)
    START           reduce using rule 16 (traversal -> GO UP UNTIL condition .)
    GO              reduce using rule 16 (traversal -> GO UP UNTIL condition .)


state 83

    (31) property_assertion -> query_reference LABEL IS A . PROPERTY LABEL OF ENTITY LABEL NAMED BY LABEL
    (32) property_assertion -> query_reference LABEL IS A . UNIQUE PROPERTY LABEL OF ENTITY LABEL

    PROPERTY        shift and go to state 95
    UNIQUE          shift and go to state 96


state 84

    (34) relationship_assertion -> query_reference LABEL NAMED BY . LABEL IS RELATED TO LABEL NAMED BY LABEL AS LABEL

    LABEL           shift and go to state 97


state 85

    (33) coreference_assertion -> query_reference LABEL AND LABEL . COREFER

    COREFER         shift and go to state 98


state 86

    (27) select_head -> SELECT selection_list FROM LABEL .
